# vyer

./: .gitignore  2026-code-context-engine-v5.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  benchmark-plan.md  fixes.md  test.sh  update.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benches/track_a/: agent_eval.py  edit_bench.py  mcp_client.py  probe_extract_apply.py  run_track_a.py  scale_bench.py  superpower_bench.py
crates/vyer-core/: Cargo.toml
crates/vyer-core/src/: lib.rs
crates/vyer-incr/: Cargo.toml
crates/vyer-incr/src/: lib.rs
crates/vyer-index/: Cargo.toml
crates/vyer-index/src/: lib.rs
crates/vyer-server/: Cargo.toml
crates/vyer-server/examples/: primitives_bench.rs  reindex_bench.rs  warm_bench.rs
crates/vyer-server/src/: apply.rs  engine.rs  http.rs  jsonrpc.rs  lexical.rs  lib.rs  main.rs  mcp.rs  rmcp_server.rs.reference  semantic.rs  watch.rs
crates/vyer-server/tests/: README.md  cli_smoke.rs  integration.rs  stdio_e2e.rs
docs/: AGENT-PLAYBOOK.md  AGENT-SUPERPOWERS.md  NEW-CAPABILITIES.md  PRODUCT-PLAN.md  REFACTOR-AND-DEPS.md  RELEASING.md  TEST-PLAN.md  design-code-run.md  design-lsp-sidecar.md  language-architecture.md
npm/: README.md  install.js  package-lock.json  package.json
packaging/homebrew/: vyer.rb
scripts/: gate.sh  smoke.sh
