[package]
name = "vyer-index"
version = "0.2.0"
edition = "2021"
description = "Real parsing for Vyer: tree-sitter grammars (Rust/Python/JS/TS/Go) producing the same ParseTree the incremental core memoizes. Attaches at vyer-incr's parser-injection hook; the incremental spine is untouched."

[dependencies]
vyer-incr = { path = "../vyer-incr" }
tree-sitter = "0.25"
streaming-iterator = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-dart = "0.2.0"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.24"
